# spinal-segmentation-analysis

./: CMakeLists.txt  README.md
SpineSeg/: CMakeLists.txt  SpineSeg.py
